@@ -10,15 +10,16 @@
   <description>Production-ready reference implementation for extending the OpenWorkflow specification with native Agentic AI capabilities</description>
 
   <properties>
-    <quarkus-plugin.version>3.38.1</quarkus-plugin.version>
+    <quarkus-plugin.version>3.27.2</quarkus-plugin.version>
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
-    <quarkus.platform.version>3.38.1</quarkus.platform.version>
+    <quarkus.platform.version>3.27.2</quarkus.platform.version>
     <kogito.bom.version>10.2.0</kogito.bom.version>
     <sonataflow.version>10.2.0</sonataflow.version>
     <maven.compiler.release>17</maven.compiler.release>
     <version.compiler.plugin>3.8.1</version.compiler.plugin>
     <version.surefire.plugin>3.0.0-M7</version.surefire.plugin>
+    <version.resources.plugin>3.4.0</version.resources.plugin>
   </properties>
 
   <dependencyManagement>
@@ -84,6 +85,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-resources-plugin</artifactId>
+        <version>${version.resources.plugin}</version>
         <executions>
           <execution>
             <id>copy-resources-before-codegen</id>
@@ -107,6 +109,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${version.surefire.plugin}</version>
         <configuration>
+          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
           <systemPropertyVariables>
             <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
           </systemPropertyVariables>
